<resources>
    <string name="app_name">OAuthDemo</string>
    <string name="facebook_app_id">713963108714453</string>
    <string name="loginCanceled">Login attempt canceled.</string>
    <string name="loginFailed">Login attempt failed.</string>
    <string name="loginSuccess">User ID: %1$s. Token: %2$s.</string>
    <string name="welcome">Welcome to CMU SV door access!</string>
    <string name="instruction">Please scan a NFC field.</string>
    <string name="selectDomain">Please login.</string>
    <string name="loggedIn">Logged in!</string>
    <string name="formatNdef">Format a tag to NDEF</string>
    <string name="url_label">Please enter a url.</string>
    <string name="defaultServer">http://10.0.13.179:8090/auth</string>
    <string name="verified">Server Signature Verified</string>
    <string name="loginAccess">You should now be able to access the door.</string>
    <string name="welcomeName">Welcome %1$s!</string>
    <string name="failed">Login Failed. Please retry.</string>
</resources>
