<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6d7eff"
        android:gravity="center"
        android:text="@string/formatNdef"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:padding="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/url_label"
        android:id="@+id/url_label"
        android:keepScreenOn="false"
        android:labelFor="@+id/url"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/url"
        android:inputType="textUri"
        android:layout_marginTop="15dp"
        android:text="@string/defaultServer" />

</LinearLayout>
